; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_qsv.c_ff_qsv_map_pixfmt.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_qsv.c_ff_qsv_map_pixfmt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MFX_FOURCC_NV12 = common dso_local global i32 0, align 4
@MFX_FOURCC_P010 = common dso_local global i32 0, align 4
@ENOSYS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ff_qsv_map_pixfmt(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  %6 = load i32, i32* %4, align 4
  switch i32 %6, label %13 [
    i32 130, label %7
    i32 128, label %7
    i32 132, label %7
    i32 129, label %10
    i32 131, label %10
  ]

7:                                                ; preds = %2, %2, %2
  %8 = load i32, i32* @MFX_FOURCC_NV12, align 4
  %9 = load i32*, i32** %5, align 8
  store i32 %8, i32* %9, align 4
  store i32 132, i32* %3, align 4
  br label %16

10:                                               ; preds = %2, %2
  %11 = load i32, i32* @MFX_FOURCC_P010, align 4
  %12 = load i32*, i32** %5, align 8
  store i32 %11, i32* %12, align 4
  store i32 131, i32* %3, align 4
  br label %16

13:                                               ; preds = %2
  %14 = load i32, i32* @ENOSYS, align 4
  %15 = call i32 @AVERROR(i32 %14)
  store i32 %15, i32* %3, align 4
  br label %16

16:                                               ; preds = %13, %10, %7
  %17 = load i32, i32* %3, align 4
  ret i32 %17
}

declare dso_local i32 @AVERROR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
